examples/01-clean-code-arch-simple/src/domain/customer/errors/invalid-customer-name-error.ts
export class InvalidCustomerNameError extends Error {
  constructor(message: string) {
    super(message);
    this.name = "InvalidCustomerNameError";
  }
}
